added CSS to project

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
 
@@ -36,7 +37,12 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>Inline CSS: Applies to a specific tag to style a particular page element only.</li>
+          <li>Internal style sheet: contains rules that apply to all tagged page elements.</li>
+          <li>External CSS style sheet: It allows them to keep all the CSS rules in a seperate file.</li>
+          <li>External CSS style sheet is prefered by most developers because it makes design changes easier.</li>
         </ul>
       </section>
    
