Added JavaScript to the project

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <header id="header">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
 
 
@@ -57,7 +58,9 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>We can use the "console.log" method to output a message to the web console by adding an argument.</li>
+          <li>the script.js file is linked within the body element.</li>
+          
         </ul>
       </section>
 
@@ -66,7 +69,7 @@
     <footer>
       <p>I can code!</p>
     </footer>
-
+    <script src="./assets/script.js"></script>
   </body>
   
 </html>
