--- a/index.html
+++ b/index.html
@@ -58,9 +58,13 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
           <li>We can use the "console.log" method to output a message to the web console by adding an argument.</li>
           <li>the script.js file is linked within the body element.</li>
-          
+          <li>Remember to include the empty parentheses after the function name.</li>
+          <li>To execute a function, we must call it in our code.</li>
+          <li>Control flow dictates that JavaScript files are executed from top to bottom, order matters.</li>
         </ul>
       </section>
 
