--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
         <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>Saving my work on Github:</li>
+          <li> (1) In the terminal, navigate to the directory, then use ( git add -A ) to stage the changes.</li>
+          <li> (2) Add a commit message ( git commit -m “your message here” ) on your own that describes the changes you made.</li>
+          <li> (3) Make sure the local branch is up to date before pushing up the changes ( git pull origin main ).</li>
+          <li> (4) To complete the Git flow, use ( git push origin "feature branch name here" ) to push up your changes to the remote repository.</li>
+          <li> (5) Continue next steps through Github in order to merge the feature branch into the main.</li>
         </ul>
       </section>
    
